--- a/src/components/attribution.css
+++ b/src/components/attribution.css
@@ -1,5 +1,5 @@
 .attribution{
-  min-height: 550px;
+  min-height: 600px;
   bottom: 0px;
   top: 0;
   left: 0px;
