--- a/src/components/charts/chart.sass
+++ b/src/components/charts/chart.sass
@@ -1,7 +1,7 @@
 @import ../vars
 
 .chart-panel
-  height: 300px
+  height: 290px
   .chart-content-container
     height: 100%
 
