--- a/src/components/controls/data-controls.sass
+++ b/src/components/controls/data-controls.sass
@@ -4,12 +4,11 @@
   width: 100%
   height: 23px
   text-align: center
-  border-bottom: 2px solid silver
 
   .data-option
     width: 140px
     display: inline-block
-    height: 16px
+    height: 18px
     background: $color-nav-cinder-light3
     border: 2px solid $color-nav-cinder-light3
     border-bottom: 0
@@ -21,14 +20,16 @@
     white-space: nowrap
 
     &:hover
-      border: 2px solid $color-nav-cinder-light1
+      border: 2px solid $color-nav-cinder-light3
       border-bottom: 0
       background: $color-nav-cinder-light2
       opacity: 1
     &.selected
-      border: 2px solid $color-nav-cinder-light1
+      border: 2px solid $color-nav-cinder-light2
+      background: $color-nav-cinder-light2
       border-bottom: 0
       opacity: 1
+      z-index: 1
 
     input[type="radio"]
       display: none
